Small fix with text-align of h1

--- a/css/app.css
+++ b/css/app.css
@@ -14,6 +14,7 @@
 h1 {
     font-size: 6rem;
     position: relative;
+    text-align: center;
 }
 
 h2 {
